querySRV ECONNREFUSED Error resolved

--- a/Server/package.json
+++ b/Server/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Backend server",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "server": "nodemon server.js",
-    "start": "node server.js"
+    "server": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "keywords": [],
   "author": "",
