--- a/Server/package.json
+++ b/Server/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@clerk/express": "^1.7.73",
     "axios": "^1.13.5",
     "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "inngest": "^3.52.3",
     "mongoose": "^9.2.1"
   },
   "devDependencies": {
